Fix: #48 - Pre-wrap markdown paragraphs in notes

--- a/src/sass/theme/_global.scss
+++ b/src/sass/theme/_global.scss
@@ -140,6 +140,11 @@ dd {
     font-size: $font-size-sm;
 }
 
+.markdown p {
+    margin-bottom: .5rem;
+    white-space: pre-wrap;
+}
+
 .wt-page-menu-button {
     @include jc-button-gradient;
 }
